--- a/build.gradle
+++ b/build.gradle
@@ -58,13 +58,17 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'   
     
-    //compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.5.0'
-
-
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
+    
+    compile group: 'org.hibernate.validator', name: 'hibernate-validator', version: '6.0.14.Final'
+    
+    compile group: 'org.mockito', name: 'mockito-core', version: '1.9.5'
+    
     runtimeOnly('mysql:mysql-connector-java')
     //compile('org.springframework.boot:spring-boot-starter-batch')
     //testCompile('org.springframework.boot:spring-boot-starter-test')
-    //testCompile('org.springframework.batch:spring-batch-test:'5.1.4.RELEASE)
+    testCompile("org.springframework.batch:spring-batch-test:${springVersion}")
+    testCompile('org.hamcrest:hamcrest-all:1.3')
     testCompile(group: 'junit', name: 'junit', version: '4.12')
 }
 
