--- a/build.gradle
+++ b/build.gradle
@@ -64,11 +64,16 @@ dependencies {
     
     compile group: 'org.mockito', name: 'mockito-core', version: '1.9.5'
     
+    //https://blog.csdn.net/xichenguan/article/details/43835919
+    
+    
     runtimeOnly('mysql:mysql-connector-java')
     //compile('org.springframework.boot:spring-boot-starter-batch')
     //testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile("org.springframework.batch:spring-batch-test:${springVersion}")
+    //testCompile("org.springframework.batch:spring-batch-test:${springVersion}")
     testCompile('org.hamcrest:hamcrest-all:1.3')
+    
+    //compile group: 'junit', name: 'junit', version: '4.12'
     testCompile(group: 'junit', name: 'junit', version: '4.12')
 }
 
