--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ repositories {
 
 dependencies {
 	compile "org.apache.tomcat:tomcat-servlet-api:8.0.24"
+	compile "org.apache.tomcat:tomcat-el-api:8.0.24"
+	compile "org.apache.tomcat:tomcat-jasper-el:8.0.24"
 	compile "org.springframework:spring-beans:${springVersion}"
 	compile "org.springframework:spring-context:${springVersion}"
 	compile "org.springframework:spring-context-support:${springVersion}"
@@ -63,12 +65,12 @@ dependencies {
     compile group: 'org.hibernate.validator', name: 'hibernate-validator', version: '6.0.14.Final'
     
     compile group: 'org.mockito', name: 'mockito-core', version: '1.9.5'
-    
-    //https://blog.csdn.net/xichenguan/article/details/43835919
-    
+    //compile group: 'javax.el', name: 'javax.el-api', version: '3.0.1-b06'
+    //https://blog.csdn.net/xichenguan/article/details/43835919    
     
     runtimeOnly('mysql:mysql-connector-java')
     //compile('org.springframework.boot:spring-boot-starter-batch')
+    
     //testCompile('org.springframework.boot:spring-boot-starter-test')
     //testCompile("org.springframework.batch:spring-batch-test:${springVersion}")
     testCompile('org.hamcrest:hamcrest-all:1.3')
@@ -77,8 +79,6 @@ dependencies {
     testCompile(group: 'junit', name: 'junit', version: '4.12')
 }
 
-
-project.webAppDirName = 'WebContent'
 
 def defaultEncoding = 'UTF-8'
 compileJava {
